# backend/openapi_server/controllers/note_controller.py
@@ -7,10 +7,26 @@ from openapi_server.models.note import Note  # noqa: E501
 from openapi_server.models.note_meta_data import NoteMetaData  # noqa: E501
 from openapi_server import util
 
+from openapi_server.controllers_impl import create_new_note_impl
+
+
+def create_new_note(body): 
+    """put new note object
+
+    Adds new note object to database # noqa: E501
+
+    :param note: 
+    :type note: dict | bytes
+
+    :rtype: Union[str, Tuple[str, int], Tuple[str, int, Dict[str, str]]
+    """
+    note = Note.from_dict(body)  # noqa: E501
+    return create_new_note_impl(note)
+
 from openapi_server.controllers_impl import get_all_notes_impl
 
 
-def get_all_notes():  # noqa: E501
+def get_all_notes(): 
     """Retrieve list of all notes
 
     Array of all notes # noqa: E501
@@ -23,7 +39,7 @@ def get_all_notes():  # noqa: E501
 from openapi_server.controllers_impl import get_note_by_id_impl
 
 
-def get_note_by_id(note_id):  # noqa: E501
+def get_note_by_id(note_id): 
     """Get one single note by id
 
     Full note object with all attributes # noqa: E501
@@ -38,8 +54,8 @@ def get_note_by_id(note_id):  # noqa: E501
 from openapi_server.controllers_impl import update_note_by_id_impl
 
 
-def update_note_by_id(note_id, note):  # noqa: E501
-    """Update one single note by id
+def update_note_by_id(note_id, body): 
+    """patch note object
 
     Full note object with all attributes # noqa: E501
 
@@ -50,6 +66,5 @@ def update_note_by_id(note_id, note):  # noqa: E501
 
     :rtype: Union[Note, Tuple[Note, int], Tuple[Note, int, Dict[str, str]]
     """
-    if connexion.request.is_json:
-        note = Note.from_dict(connexion.request.get_json())  # noqa: E501
+    note = Note.from_dict(body)  # noqa: E501
     return update_note_by_id_impl(note_id, note)
