# backend/openapi_server/models/__init__.py
@@ -1,6 +1,5 @@
 # flake8: noqa
 # import models into model package
-from openapi_server.models.ai_response import AIResponse
 from openapi_server.models.abstract_entity import AbstractEntity
 from openapi_server.models.generate_response_for_raw_note_request import GenerateResponseForRawNoteRequest
 from openapi_server.models.note import Note
